# django_scoped_permissions

./: .gitignore  CHANGELOG.md  Makefile  db.sqlite3  manage.py  pyproject.toml  setup.py  test_settings.py
.github/workflows/: primary.yml  pythonpackage.yml
authentication/: middleware.py
companies/: middleware.py  models.py
companies/migrations/: 0001_initial.py  0002_company_users.py
django_scoped_permissions/: admin.py  backends.py  core.py  decorators.py  graphql.py  graphql_util.py  guards.py  models.py  schema.py  urls.py  util.py  wsgi.py
django_scoped_permissions/migrations/: 0001_initial.py  0002_scopedpermissiongroup.py
django_scoped_permissions/tests/: factories.py  models.py  schema.py  test_core.py  test_decorators.py  test_graphql.py  test_graphql_util.py  test_guards.py  test_models.py  test_permissions.py  urls.py
docs/: conf.py  index.rst
docs/guide/: core-concepts.rst  decorators.rst  graphene-django-cud-integration.rst  graphene-integration.rst  guards.rst  install.rst  stateless-usage.rst  usage.rst  view-decorators.rst
docs/ref/models/: ScopedDjangoNode.rst  (+1 more)
forum/: models.py
forum/migrations/: 0001_initial.py  0002_post.py
permissions/: admin.py  graphql.py  models.py  schema.py  scoped_mutations.py  tests.py  util.py
permissions/migrations/: 0001_initial.py  0002_scopedpermission_exclude.py  0003_auto_20200210_1558.py  0004_auto_20200211_0906.py  0005_scopedpermission_exact.py  0006_auto_20200214_1301.py
pets/: admin.py  factories.py  models.py  schema.py
pets/migrations/: 0001_initial.py  0002_auto_20200207_1038.py
scoped_backend/: schema.py  settings.py  urls.py  wsgi.py
scoped_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
users/: admin.py  factories.py  models.py  schema.py
users/migrations/: 0001_initial.py  0002_auto_20200206_1514.py  0003_usertype_name.py  0004_usertype_scoped_permissions.py
(+4 files in other folders)
