[tool.poetry]
name = "django_scoped_permissions"
version = "0.1.3"
description = "Test scoped permissions"
authors = ["Magnus Buvarp <magnus.buvarp@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
django = "^3.0.3"
graphene-django = "^2.8.0"
graphene-django-cud = "^0.7.1"
pyjwt = "^1.7.1"
factory_boy = "^2.12.0"
pydash = "^4.7.6"

[tool.poetry.dev-dependencies]
addict = "^2.2.1"
pytest = "^5.3.5"
pytest-django = "^3.8.0"
pytest-watch = "^4.2.0"
setuptools = "^45.2.0"
twine = "^3.1.1"
pytest-cov = "^2.9.0"
pytest-testmon = "^1.0.3"
watchdog = "^0.10.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
